infra/k8s/overlays/preprod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector
spec:
  rules:
    - host: collector-preprod.local
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-api
spec:
  rules:
    - host: collector-preprod.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 3001
